@startuml
'https://plantuml.com/class-diagram
class Pool {
  + run(): void
  - quack(ducks: Duck...): void
  - swim(ducks: Duck...): void
  + main(args: String[]): void
}

class ElectronicDuck {
  - _on: boolean
  + quack(): void
  + swim(): void
  + turnOn(): void
  + turnOff(): void
}

class Duck {
  + quack(): void
  + swim(): void
}

Pool --> Duck : uses
Pool --> ElectronicDuck : uses
@enduml